fixes main background on tablet

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -59,6 +59,11 @@
   background-position: 85% 100%;
   background-repeat: no-repeat;
 
+  @include onTablet {
+    background-image: url(../images/main-744.jpg);
+    background-position: center;
+  }
+
   @include onDesktop {
     background-image: url(../images/main-1260.jpg);
     background-position: center;
